--- a/pagina/css/style.css
+++ b/pagina/css/style.css
@@ -2,10 +2,10 @@
 /********* General CSS *********/
 /*******************************/
 body {
-    color: #777777;
+    color: #F1AB86;
     font-weight: 500;
     background: #ffffff;
-    font-family: 'Quicksand', sans-serif;
+    font-family: 'Comfortaa', cursive;
 }
 
 h1,
@@ -14,18 +14,18 @@ h3,
 h4,
 h5, 
 h6 {
-    color: #4a4c70;
+    color: #251605;
 }
 
 a {
-    color: #4a4c70;
+    color: #251605;
     transition: .3s;
 }
 
 a:hover,
 a:active,
 a:focus {
-    color: #FDBE33;
+    color: #C57B57;
     outline: none;
     text-decoration: none;
 }
@@ -35,18 +35,18 @@ a:focus {
     text-align: center; 
    font-size: 16px;
     font-weight: 500;
-    color: #777777;
+    color: #F1AB86;
     border-radius: 0;
-    border: 2px solid #FDBE33;
-    box-shadow: inset 0 0 0 0 #FDBE33;
+    border: 2px solid #C57B57;
+    box-shadow: inset 0 0 0 0 #C57B57;
     transition: ease-out 0.3s;
     -webkit-transition: ease-out 0.3s;
     -moz-transition: ease-out 0.3s;
 }
 
 .btn.btn-custom:hover {
-    color: #20212B;
-    box-shadow: inset 0 0 0 30px #FDBE33;
+    color: #F7DBA7;
+    box-shadow: inset 0 0 0 30px #C57B57;
 }
 
 .btn:focus,
@@ -99,7 +99,7 @@ a:focus {
     width: 45px;
     height: 45px;
     border: 5px solid #dddddd;
-    border-top: 5px solid #FDBE33;
+    border-top: 5px solid #C57B57;
     border-radius: 50%;
     -webkit-animation: spin 2s linear infinite;
     animation: spin 2s linear infinite;
@@ -118,7 +118,7 @@ a:focus {
 .back-to-top {
     position: fixed;
     display: none;
-    background: #FDBE33;
+    background: #C57B57;
     width: 44px;
     height: 44px;
     text-align: center;
@@ -131,16 +131,16 @@ a:focus {
 }
 
 .back-to-top i {
-    color: #4a4c70;
+    color: #251605;
     padding-top: 10px;
 }
 
 .back-to-top:hover {
-    background: #4a4c70;
+    background: #251605;
 }
 
 .back-to-top:hover i {
-    color: #FDBE33;
+    color: #C57B57;
 }
 
 
@@ -186,7 +186,7 @@ a:focus {
 
 .top-bar .text i {
     font-size: 16px;
-    color: #FDBE33;
+    color: #C57B57;
     margin-right: 5px;
 }
 
@@ -211,7 +211,7 @@ a:focus {
     width: 45px;
     height: 100%;
     font-size: 16px;
-    color: #FDBE33;
+    color: #C57B57;
     border-right: 1px solid rgba(255, 255, 255, .3);
 }
 
@@ -221,7 +221,7 @@ a:focus {
 
 .top-bar .social a:hover {
     color: #ffffff;
-    background: #FDBE33;
+    background: #C57B57;
 }
 
 @media (min-width: 992px) {
@@ -273,7 +273,7 @@ a:focus {
 
 .navbar-dark .navbar-nav .nav-link:hover,
 .navbar-dark .navbar-nav .nav-link.active {
-    color: #FDBE33;
+    color: #C57B57;
     transition: none;
 }
 
@@ -297,12 +297,12 @@ a:focus {
     
     .navbar.nav-sticky {
         padding: 10px 60px;
-        background: #20212B !important;
+        background: #F7DBA7 !important;
         border-bottom: none;
     }
     
     .page .navbar {
-        background: #20212B !important;
+        background: #F7DBA7 !important;
     }
     
     .navbar a.nav-link {
@@ -315,7 +315,7 @@ a:focus {
 @media (max-width: 991.98px) {   
     .navbar {
         padding: 15px;
-        background: #20212B !important;
+        background: #F7DBA7 !important;
     }
     
     .navbar a.nav-link {
@@ -409,7 +409,7 @@ a:focus {
 }
 
 .carousel .carousel-btn .btn.btn-custom:hover {
-    color: #20212B;
+    color: #F7DBA7;
 }
 
 .carousel .carousel-btn .btn:first-child {
@@ -434,8 +434,8 @@ a:focus {
     display: flex;
     align-items: center;
     justify-content: center;
-    color: #FDBE33;
-    background: rgba(256, 256, 256, .2);
+    color: #C57B57;
+    background: rgba(156, 175, 183, .2);
     font-size: 22px;
     transition: .3s;
 }
@@ -443,7 +443,7 @@ a:focus {
 .carousel .owl-nav .owl-prev:hover,
 .carousel .owl-nav .owl-next:hover {
     color: #ffffff;
-    background: #FDBE33;
+    background: #C57B57;
 }
 
 .carousel .owl-nav .owl-prev {
@@ -538,7 +538,7 @@ a:focus {
 
 .page-header h2 {
     position: relative;
-    color: #FDBE33;
+    color: #C57B57;
     font-size: 60px;
     font-weight: 700;
     margin-bottom: 20px;
@@ -552,7 +552,7 @@ a:focus {
     height: 2px;
     left: calc(50% - 50px);
     bottom: 0;
-    background: #FDBE33;
+    background: #C57B57;
 }
 
 .page-header a {
@@ -563,7 +563,7 @@ a:focus {
 }
 
 .page-header a:hover {
-    color: #FDBE33;
+    color: #C57B57;
 }
 
 .page-header a::after {
@@ -626,7 +626,7 @@ a:focus {
     font-size: 22px;
     font-weight: 600;
     text-transform: capitalize;
-    color: #FDBE33;
+    color: #C57B57;
 }
 
 .section-header h2 {
@@ -688,9 +688,9 @@ a:focus {
 
 .about .about-tab .nav.nav-pills .nav-link:hover,
 .about .about-tab .nav.nav-pills .nav-link.active {
-    color: #FDBE33;
+    color: #C57B57;
     padding-bottom: 7px;
-    border-bottom: 3px solid #FDBE33;
+    border-bottom: 3px solid #C57B57;
 }
 
 .about .about-tab .tab-content {
@@ -735,7 +735,7 @@ a:focus {
 .service .service-icon i {
     position: relative;
     display: block;
-    color: #FDBE33;
+    color: #C57B57;
     font-size: 60px;
     line-height: 60px;
     margin-top: 5px;
@@ -764,7 +764,7 @@ a:focus {
     height: 40px;
     top: calc(50% - 20px);
     left: -1px;
-    background: #FDBE33;
+    background: #C57B57;
 }
 
 .service .service-text h3 {
@@ -816,7 +816,7 @@ a:focus {
 
 .donate .donate-form {
     padding: 90px 30px;
-    background: #FDBE33;
+    background: #C57B57;
 }
 
 .donate .donate-form .control-group {
@@ -859,7 +859,7 @@ a:focus {
 
 .donate .donate-form .btn.btn-custom:hover,
 .donate .donate-form .btn.btn-custom.active {
-    color: #FDBE33;
+    color: #C57B57;
     border: 1px solid #ffffff;
     box-shadow: inset 0 0 0 30px #ffffff;
 }
@@ -917,7 +917,7 @@ a:focus {
 .causes .progress .progress-bar {
     position: relative;
     width: 0px;
-    background: #FDBE33;
+    background: #C57B57;
     overflow: visible;
     transition: 2s;
 }
@@ -929,8 +929,8 @@ a:focus {
     height: 23px;
     display: inline-block;
     padding: 2px 6px;
-    background: #FDBE33;
-    color: #20212B;
+    background: #C57B57;
+    color: #F7DBA7;
 }
 
 .causes .progress-bar span::after {
@@ -941,7 +941,7 @@ a:focus {
     top: 23px;
     left: calc(50% - 6px);
     border: 6px solid;
-    border-color: #FDBE33 transparent transparent transparent;
+    border-color: #C57B57 transparent transparent transparent;
 }
 
 .causes .progress-text {
@@ -979,8 +979,8 @@ a:focus {
 }
 
 .causes .causes-btn .btn:last-child {
-    color: #20212B;
-    background: #FDBE33;
+    color: #F7DBA7;
+    background: #C57B57;
 }
 
 .causes .causes-btn .btn:last-child:hover {
@@ -1012,7 +1012,7 @@ a:focus {
     margin-top: 10px;
     font-size: 60px;
     line-height: 60px;
-    color: #FDBE33;
+    color: #C57B57;
 }
 
 .facts .facts-text {
@@ -1120,14 +1120,14 @@ a:focus {
     padding: 5px 0;
     text-align: center;
     font-size: 14px;
-    color: #4a4c70;
-    border: 2px solid #FDBE33;
+    color: #251605;
+    border: 2px solid #C57B57;
     transition: .3s;
 }
 
 .team .team-social a:hover {
-    color: #20212B;
-    background: #FDBE33;
+    color: #F7DBA7;
+    background: #C57B57;
 }
 
 .team .team-item:hover .team-text {
@@ -1202,11 +1202,11 @@ a:focus {
     width: 12px;
     height: 12px;
     border-radius: 0;
-    background: #FDBE33;
+    background: #C57B57;
 }
 
 .testimonial .owl-dot.active {
-    background: #20212B;
+    background: #F7DBA7;
 }
 
 
@@ -1247,7 +1247,7 @@ a:focus {
 
 .volunteer .volunteer-form {
     padding: 90px 30px;
-    background: #FDBE33;
+    background: #C57B57;
 }
 
 .volunteer .volunteer-form .control-group {
@@ -1288,7 +1288,7 @@ a:focus {
 }
 
 .volunteer .volunteer-form .btn.btn-custom:hover {
-    color: #FDBE33;
+    color: #C57B57;
     border: 1px solid #ffffff;
     box-shadow: inset 0 0 0 30px #ffffff;
 }
@@ -1336,7 +1336,7 @@ a:focus {
 }
 
 .event .event-meta i {
-    color: #4a4c70;
+    color: #251605;
     width: 25px;
 }
 
@@ -1363,7 +1363,7 @@ a:focus {
     height: 40px;
     top: calc(50% - 20px);
     left: -1px;
-    background: #FDBE33;
+    background: #C57B57;
 }
 
 .event .event-text h3 {
@@ -1449,11 +1449,11 @@ a:focus {
 }
 
 .blog .blog-text h3 a {
-    color: #4a4c70;
+    color: #251605;
 }
 
 .blog .blog-text h3 a:hover {
-    color: #FDBE33;
+    color: #C57B57;
 }
 
 .blog .blog-text p {
@@ -1469,7 +1469,7 @@ a:focus {
 
 .blog .blog-meta p {
     margin: 0;
-    color: #777777;
+    color: #F1AB86;
     padding: 0 30px;
     border-right: 1px solid rgba(0, 0, 0, .15);
 }
@@ -1484,7 +1484,7 @@ a:focus {
 }
 
 .blog .blog-meta i {
-    color: #4a4c70;
+    color: #251605;
     margin-right: 8px
 }
 
@@ -1493,19 +1493,19 @@ a:focus {
 }
 
 .blog .pagination .page-link {
-    color: #4a4c70;
+    color: #251605;
     border-radius: 0;
-    border-color: #4a4c70;
+    border-color: #251605;
 }
 
 .blog .pagination .page-link:hover,
 .blog .pagination .page-item.active .page-link {
-    color: #FDBE33;
-    background: #4a4c70;
+    color: #C57B57;
+    background: #251605;
 }
 
 .blog .pagination .disabled .page-link {
-    color: #999999;
+    color: #C57B57;
 }
 
 
@@ -1613,14 +1613,14 @@ a:focus {
     padding: 7px 15px;
     font-size: 14px;
     font-weight: 500;
-    color: #4a4c70;
-    border: 1px solid #4a4c70;
+    color: #251605;
+    border: 1px solid #251605;
 }
 
 .single .single-tags a:hover {
     color: #ffffff;
-    background: #FDBE33;
-    border-color: #FDBE33;
+    background: #C57B57;
+    border-color: #C57B57;
 }
 
 .single .single-bio {
@@ -1698,7 +1698,7 @@ a:focus {
 }
 
 .single .post-item .post-text a:hover {
-    color: #FDBE33;
+    color: #C57B57;
 }
 
 .single .post-item .post-meta {
@@ -1717,7 +1717,7 @@ a:focus {
 
 .single .post-item .post-meta p a {
     margin-left: 5px;
-    color: #999999;
+    color: #C57B57;
     font-size: 14px;
     font-weight: 500;
     font-style: normal;
@@ -1739,16 +1739,16 @@ a:focus {
     display: flex;
     align-items: center;
     justify-content: center;
-    color: #4a4c70;
-    background: #FDBE33;
+    color: #251605;
+    background: #C57B57;
     font-size: 16px;
     transition: .3s;
 }
 
 .single .related-slider .owl-nav .owl-prev:hover,
 .single .related-slider .owl-nav .owl-next:hover {
-    color: #FDBE33;
-    background: #4a4c70;
+    color: #C57B57;
+    background: #251605;
 }
 
 .single .single-comment {
@@ -1807,13 +1807,13 @@ a:focus {
     padding: 3px 10px;
     font-size: 14px;
     font-weight: 500;
-    color: #4a4c70;
+    color: #251605;
     background: #dddddd;
     border-radius: 0;
 }
 
 .single .comment-text .btn:hover {
-    background: #FDBE33;
+    background: #C57B57;
 }
 
 .single .comment-form {
@@ -1842,7 +1842,7 @@ a:focus {
 
 .single .comment-form input:focus,
 .single .comment-form textarea:focus {
-    border-color: #FDBE33;
+    border-color: #C57B57;
 }
 
 
@@ -1880,7 +1880,7 @@ a:focus {
     height: 2px;
     bottom: 0;
     left: 0;
-    background: #FDBE33;
+    background: #C57B57;
 }
 
 .sidebar .sidebar-widget .search-widget {
@@ -1895,7 +1895,7 @@ a:focus {
 
 .sidebar .search-widget input:focus {
     box-shadow: none;
-    border-color: #FDBE33;
+    border-color: #C57B57;
 }
 
 .sidebar .search-widget .btn {
@@ -1905,7 +1905,7 @@ a:focus {
     height: 40px;
     padding: 0;
     font-size: 25px;
-    color: #FDBE33;
+    color: #C57B57;
     background: none;
     border-radius: 0;
     border: none;
@@ -1913,7 +1913,7 @@ a:focus {
 }
 
 .sidebar .search-widget .btn:hover {
-    color: #4a4c70;
+    color: #251605;
 }
 
 .sidebar .sidebar-widget .recent-post {
@@ -1925,15 +1925,15 @@ a:focus {
 }
 
 .sidebar .tab-post .nav.nav-pills .nav-link {
-    color: #4a4c70;
-    background: #FDBE33;
+    color: #251605;
+    background: #C57B57;
     border-radius: 0;
 }
 
 .sidebar .tab-post .nav.nav-pills .nav-link:hover,
 .sidebar .tab-post .nav.nav-pills .nav-link.active {
-    color: #FDBE33;
-    background: #4a4c70;
+    color: #C57B57;
+    background: #251605;
 }
 
 .sidebar .tab-post .tab-content {
@@ -1973,7 +1973,7 @@ a:focus {
     content: '\f105';
     font-family: 'Font Awesome 5 Free';
     font-weight: 900;
-    color: #FDBE33;
+    color: #C57B57;
     left: 1px;
 }
 
@@ -1993,15 +1993,15 @@ a:focus {
     padding: 7px 15px;
     font-size: 14px;
     font-weight: 500;
-    color: #4a4c70;
-    border: 1px solid #4a4c70;
+    color: #251605;
+    border: 1px solid #251605;
     border-radius: 0;
 }
 
 .single .tag-widget a:hover {
     color: #ffffff;
-    background: #FDBE33;
-    border-color: #FDBE33;
+    background: #C57B57;
+    border-color: #C57B57;
 }
 
 .sidebar .image-widget {
@@ -2027,7 +2027,7 @@ a:focus {
     position: relative;
     margin-top: 45px;
     padding-top: 90px;
-    background: #20212B;
+    background: #F7DBA7;
 }
 
 .footer .footer-contact,
@@ -2044,7 +2044,7 @@ a:focus {
     margin-bottom: 30px;
     font-size: 22px;
     font-weight: 700;
-    color: #FDBE33;
+    color: #C57B57;
 }
 
 .footer .footer-link a {
@@ -2063,7 +2063,7 @@ a:focus {
 }
 
 .footer .footer-link a:hover {
-    color: #FDBE33;
+    color: #C57B57;
     letter-spacing: 1px;
 }
 
@@ -2100,7 +2100,7 @@ a:focus {
 
 .footer .footer-newsletter label {
     margin-top: 5px;
-    color: #777777;
+    color: #F1AB86;
     font-size: 14px;
     letter-spacing: 1px;
 }
@@ -2117,12 +2117,12 @@ a:focus {
 .footer .copyright .row {
     padding-top: 25px;
     padding-bottom: 25px;
-    border-top: 1px solid rgba(256, 256, 256, .1);
+    border-top: 1px solid rgba(156, 175, 183, .1);
 }
 
 .footer .copyright p {
     margin: 0;
-    color: #999999;
+    color: #C57B57;
 }
 
 .footer .copyright .col-md-6:last-child p {
@@ -2134,7 +2134,7 @@ a:focus {
 }
 
 .footer .copyright p a:hover {
-    color: #FDBE33;
+    color: #C57B57;
 }
 
 @media (max-width: 767.98px) {
