--- a/app/css/style.css
+++ b/app/css/style.css
@@ -530,7 +530,7 @@ a:focus {
     margin-bottom: 45px;
     padding: 210px 0 90px 0;
     text-align: center;
-    background: linear-gradient(rgba(0, 0, 0, .5), rgba(0, 0, 0, .5)), url(../img/page-header.jpg);
+    background: linear-gradient(rgba(248, 209, 209, 0.5), rgba(0, 0, 0, .5)), url(../img/page-header.jpg);
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
@@ -1173,7 +1173,7 @@ a:focus {
 }
 
 header {
-    background-color: black;
+    background-color: rgb(248, 187, 187);
     color: white;
     display: flex;
     align-items: center;
